crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__path_mapping_delete_reports_success.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system path-mapping",
  "status": "ok",
  "data": {
    "id": 1,
    "deleted": true
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
