crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__path_mapping_list_outputs_records.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system path-mapping",
  "status": "ok",
  "data": {
    "path_mappings": [
      {
        "id": 1,
        "external_system_id": 1,
        "internal_prefix": "/srv/media",
        "external_prefix": "/data",
        "visibility": "read_only",
        "created_at": "[ts]",
        "retired_at": null
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
