crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__register_outputs_record.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system",
  "status": "ok",
  "data": {
    "id": 1,
    "kind": "plex",
    "display_name": "Home Plex",
    "connection_profile": {
      "host": "127.0.0.1"
    },
    "auth_ref": "keyring://voom/plex",
    "health_status": "unknown",
    "rate_limit_config": {},
    "created_at": "[ts]",
    "retired_at": null,
    "epoch": 0
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
