crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__register_rejects_invalid_connection_profile.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "BAD_ARGS",
    "message": "--connection-profile is not valid JSON: expected ident at line 1 column 2"
  }
}
