crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__show_unknown_id_is_not_found.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "NOT_FOUND",
    "message": "external system id=999 not found"
  }
}
