crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__sync_outputs_report.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system",
  "status": "ok",
  "data": {
    "external_system_id": 1,
    "health_status": "unknown",
    "active_link_count": 0,
    "last_outcome": "ok",
    "last_links_recorded": 0,
    "last_links_retired": 0,
    "last_started_at": "[ts]",
    "last_finished_at": "[ts]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
