crates/voom-cli/tests/snapshots/external_system_envelope__external_system_envelope__sync_report_before_first_sync.snap
---
source: crates/voom-cli/tests/external_system_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "external-system",
  "status": "ok",
  "data": {
    "external_system_id": 1,
    "health_status": "unknown",
    "active_link_count": 0,
    "last_outcome": null,
    "last_links_recorded": null,
    "last_links_retired": null,
    "last_started_at": null,
    "last_finished_at": null
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
